--- a/helm/cas-metabase/Chart.yaml
+++ b/helm/cas-metabase/Chart.yaml
@@ -20,3 +20,7 @@ dependencies:
   - name: terraform-bucket-provision
     version: 0.1.3
     repository: https://bcgov.github.io/cas-pipeline/
+  - name: patroni-migration
+    version: 0.0.1
+    repository:  https://bcgov.github.io/cas-postgres/
+    
