--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -33,8 +33,7 @@ image:
   pullPolicy: Always
 database:
   type: postgres
-  host: cas-metabase-patroni
-  port: 5432
+  superUserSecretName: cas-metabase-db-cas-postgres-cluster-pguser-superuser
   dbname: metabase
   existingSecret: cas-metabase
   existingSecretUsernameKey: database-user
@@ -97,7 +96,6 @@ patroni-migration:
     # for the KNP
     sourceReleaseName: cas-metabase
     targetReleaseName: cas-metabase-db
-    originalReplicaCount: 2
 
   from:
     secretName: cas-metabase-patroni
