--- a/helm/cas-metabase-postgres-cluster/values.yaml
+++ b/helm/cas-metabase-postgres-cluster/values.yaml
@@ -19,7 +19,9 @@ postgresCluster:
   # The "users" value(s) is passed to the crunchy postgres operator to create the database.
   # See https://access.crunchydata.com/documentation/postgres-operator/latest/tutorials/basic-setup/user-management
   users:
-    - name: superuser
+    - name: postgres
+      databases:
+        - postgres
       options: "SUPERUSER"
 
 gcsBackups:
