--- a/helm/cas-metabase/Chart.yaml
+++ b/helm/cas-metabase/Chart.yaml
@@ -17,9 +17,9 @@ dependencies:
     repository: https://bcgov.github.io/cas-airflow
     alias: prod-test-restore
     condition: prod-test-restore.enable
-  - name: terraform-bucket-provision
-    version: 0.1.3
-    repository: https://bcgov.github.io/cas-pipeline/
+  # - name: terraform-bucket-provision
+  #   version: 0.1.3
+  #   repository: https://bcgov.github.io/cas-pipeline/
   - name: patroni-migration
-    version: 0.0.3
+    version: 0.0.5
     repository:  https://bcgov.github.io/cas-postgres/
