--- a/helm/cas-metabase/templates/deployment.yaml
+++ b/helm/cas-metabase/templates/deployment.yaml
@@ -57,25 +57,25 @@ spec:
           - name: MB_DB_HOST
             valueFrom:
               secretKeyRef:
-                name: {{ .Values.database.superUserSecretName }}
+                name: {{ .Values.database.metabaseUserSecretName }}
                 key: pgbouncer-host
           - name: MB_DB_PORT
             valueFrom:
               secretKeyRef:
-                name: {{ .Values.database.superUserSecretName }}
+                name: {{ .Values.database.metabaseUserSecretName }}
                 key: pgbouncer-port
           - name: MB_DB_DBNAME
             value: {{ .Values.database.dbname | quote }}
           - name: MB_DB_USER
             valueFrom:
               secretKeyRef:
-                name: {{ or .Values.database.existingSecret (printf "%s-database" (include "cas-metabase.fullname" .)) }}
-                key: {{ or .Values.database.existingSecretUsernameKey "username" }}
+                name: {{ .Values.database.metabaseUserSecretName }}
+                key: user
           - name: MB_DB_PASS
             valueFrom:
               secretKeyRef:
-                name: {{ or .Values.database.existingSecret (printf "%s-database" (include "cas-metabase.fullname" .)) }}
-                key: {{ or .Values.database.existingSecretPasswordKey "password" }}
+                name: {{ .Values.database.metabaseUserSecretName }}
+                key: password
           {{- if .Values.pluginsDirectory }}
           - name: MB_PLUGINS_DIR
             value: {{ .Values.pluginsDirectory | quote }}
