chore: removing create-user-db job now done by the postgres cluster

--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -110,4 +110,5 @@ patroni-migration:
     db: metabase
 
   to:
-    secretName: cas-metabase-db-cas-postgres-cluster-pguser-postgres
+    superuserSecretName: cas-metabase-db-cas-postgres-cluster-pguser-postgres
+    appuserSecretName: cas-metabase-db-cas-postgres-cluster-pguser-metabase
