--- a/helm/cas-metabase-postgres-cluster/values.yaml
+++ b/helm/cas-metabase-postgres-cluster/values.yaml
@@ -14,13 +14,16 @@ postgresCluster:
       memory: 256Mi
     limits:
       cpu: 500m
-      memory: 512Mi
+      memory: 1Gi
 
   # The "users" value(s) is passed to the crunchy postgres operator to create the database.
   # See https://access.crunchydata.com/documentation/postgres-operator/latest/tutorials/basic-setup/user-management
   users:
     - name: postgres
+      options: "SUPERUSER"
     - name: metabase
+      databases:
+        - metabase
 
 gcsBackups:
   enable: true
