--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -35,6 +35,7 @@ database:
   type: postgres
   clusterReleaseName: cas-metabase-db
   metabaseUserSecretName: cas-metabase-db-cas-postgres-cluster-pguser-metabase
+  superuserSecretName: cas-metabase-db-cas-postgres-cluster-pguser-postgres
   dbname: metabase
   existingSecret: cas-metabase
   existingSecretUsernameKey: database-user
