--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -87,15 +87,12 @@ download-cas-metabase-dags:
   helm:
     hook: "pre-install,pre-upgrade"
 
-terraform-bucket-provision:
-  terraform:
-    namespace_apps: '["mb-backups"]'
-    workspace: metabase
-
 patroni-migration:
   migrationJob:
     ignoreRoles:
       - metabase
+      - postgres
+
   deployment:
     name: cas-metabase
     # for the KNP
