--- a/helm/cas-metabase/templates/cron-prod-test-restore.yaml
+++ b/helm/cas-metabase/templates/cron-prod-test-restore.yaml
@@ -26,7 +26,7 @@ spec:
           containers:
             - env:
                 - name: MB_USER
-                  alueFrom:
+                  valueFrom:
                     secretKeyRef:
                       key: {{ .Values.database.metabaseUserSecretName }}
                       name: user
