--- a/helm/cas-metabase/values-prod.yaml
+++ b/helm/cas-metabase/values-prod.yaml
@@ -29,3 +29,7 @@ metabaseHPA:
   enable: true
   minReplicas: 2
   maxReplicas: 5
+
+patroni-migration:
+  from:
+    host: cas-metabase-patroni.9212c9-prod.svc.cluster.local
