--- a/helm/cas-metabase/values-test.yaml
+++ b/helm/cas-metabase/values-test.yaml
@@ -37,3 +37,7 @@ prod-test-restore:
   dagId: cas_metabase_prod_test_restore
   helm:
     hook: ""
+
+patroni-migration:
+  from:
+    host: cas-metabase-patroni.9212c9-test.svc.cluster.local
