--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -101,7 +101,7 @@ patroni-migration:
 
   from:
     secretName: cas-metabase-patroni
-    host: cas-metabase-patroni.9212c9-dev.svc.cluster.local
+    host: ~
     passwordSecretKey: password-superuser
     port: 5432
     user: postgres
